--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-12
 
     steps:
       # 1. Клонируем код
@@ -27,14 +27,13 @@ jobs:
           pip install -r requirements.txt
           pip install pyinstaller
 
-      # 4. Собираем универсальное .app приложение
-      - name: Build universal .app with PyInstaller
+      # 4. Собираем .app приложение
+      - name: Build .app with PyInstaller
         run: |
           pyinstaller --name "tldv-extract" \
                       --onefile \
                       --windowed \
                       --add-data "templates:templates" \
-                      --target-arch=universal2 \
                       app.py
 
       # 5. НОВЫЙ ШАГ: Создаем .dmg установщик
