--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
       # 1. Клонируем код
@@ -20,20 +20,23 @@ jobs:
         with:
           python-version: '3.11'
 
-      # 3. Устанавливаем зависимости
-      - name: Install dependencies
+      # 3. Устанавливаем УНИВЕРСАЛЬНЫЕ зависимости
+      - name: Install universal dependencies
+        env:
+          ARCHFLAGS: "-arch arm64 -arch x86_64"
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
 
-      # 4. Собираем .app приложение
-      - name: Build .app with PyInstaller
+      # 4. Собираем универсальное .app приложение
+      - name: Build universal .app with PyInstaller
         run: |
           pyinstaller --name "tldv-extract" \
                       --onefile \
                       --windowed \
                       --add-data "templates:templates" \
+                      --target-arch=universal2 \
                       app.py
 
       # 5. НОВЫЙ ШАГ: Создаем .dmg установщик
