--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,4 +1,4 @@
-name: Build macOS App (Universal Fix)
+name: Build macOS App (Debug Mode)
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
 
 jobs:
   build:
-    # Возвращаемся на быстрый и доступный runner
-    runs-on: macos-latest
+    # Собираем на Intel, это наш самый надежный вариант
+    runs-on: macos-13
 
     steps:
       - name: Checkout code
@@ -19,30 +19,24 @@ jobs:
         with:
           python-version: '3.11'
 
-      # ГЛАВНОЕ ИЗМЕНЕНИЕ ЗДЕСЬ
-      - name: Install dependencies (with universal CFFI fix)
-        env:
-          # Говорим компилятору создавать универсальные бинарники
-          ARCHFLAGS: "-arch arm64 -arch x86_64"
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Говорим pip НЕ скачивать готовый cffi, а собрать его с нуля
-          pip install --no-binary cffi cffi
-          # Теперь устанавливаем все остальное
           pip install -r requirements.txt
           pip install pyinstaller
 
-      # Собираем в отладочном режиме (без --windowed), чтобы видеть ошибки
+      # ГЛАВНОЕ ИЗМЕНЕНИЕ: Собираем без флага --windowed
       - name: Build CONSOLE .app with PyInstaller
         run: |
           pyinstaller --name "tldv-extract" \
                       --onefile \
                       --add-data "templates:templates" \
-                      --target-arch universal2 \
                       app.py
 
+      # Мы не будем создавать .dmg, чтобы упростить процесс.
+      # Мы просто запакуем .app в zip-архив.
       - name: Upload .app artifact
         uses: actions/upload-artifact@v4
         with:
-          name: macOS-App-Universal-Debug
+          name: macOS-App-Debug
           path: dist/tldv-extract.app
