--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,4 +1,4 @@
-name: Build macOS App (Debug Mode)
+name: Build macOS App (Universal Fix v2)
 
 on:
   push:
@@ -7,8 +7,7 @@ on:
 
 jobs:
   build:
-    # Собираем на Intel, это наш самый надежный вариант
-    runs-on: macos-13
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
@@ -19,24 +18,27 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      # ИЗМЕНЕНИЕ ЗДЕСЬ: Добавляем PyQt5 в список для принудительной сборки
+      - name: Install dependencies (with universal CFFI & PyQt5 fix)
+        env:
+          ARCHFLAGS: "-arch arm64 -arch x86_64"
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # Теперь мы говорим pip НЕ использовать готовые бинарники для cffi И PyQt5
+          pip install --no-binary cffi,PyQt5 -r requirements.txt
           pip install pyinstaller
 
-      # ГЛАВНОЕ ИЗМЕНЕНИЕ: Собираем без флага --windowed
+      # Собираем в отладочном режиме универсальное приложение
       - name: Build CONSOLE .app with PyInstaller
         run: |
           pyinstaller --name "tldv-extract" \
                       --onefile \
                       --add-data "templates:templates" \
+                      --target-arch universal2 \
                       app.py
 
-      # Мы не будем создавать .dmg, чтобы упростить процесс.
-      # Мы просто запакуем .app в zip-архив.
       - name: Upload .app artifact
         uses: actions/upload-artifact@v4
         with:
-          name: macOS-App-Debug
+          name: macOS-App-Universal-Debug
           path: dist/tldv-extract.app
